# spelldraw-shape-correction

./: .gitmodules  LICENSE  README.md  demo.py  pyproject.toml
notebooks/: convexagons-demo.ipynb  fit-convex.ipynb
src/: convexagon.py  loss.py  utils.py
src/geometry/: __init__.py  area.py  hull.py  intersection.py  segments.py  sort.py
