[project]
name = "spelldraw-shape-correction"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "shapely (>=2.0.7,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false